lago-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lago-api
spec:
  selector:
    app: lago-api
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lago-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lago-api
  template:
    metadata:
      labels:
        app: lago-api
    spec:
      containers:
        - name: lago-api
          image: getlago/lago:latest
          ports:
            - containerPort: 3000
